--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="medsos">
+    <ul>
+      <li><a href="https://www.instagram.com/handyjkk/">instagram</a></li>
+    </ul>
+  </div>
     <!-- navbar -->
     <nav id="nav">
       <div class="navbar">
@@ -24,9 +29,9 @@
           <!-- menu -->
           <ul class="menu">
             <li>
-              <a href="#">Home</a>
-              <a href="#about">About</a>
-              <a href="#contact">Contact</a>
+              <a href="#" class="nav-link">Home</a>
+              <a href="#about"  class="nav-link">About</a>
+              <a href="#contact"  class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -36,9 +41,9 @@
     <!-- jumbotron -->
     <section id="jumbotron">
       <div class="container">
-        <img src="img/img1.jpg" alt="img1" class="img-jumbotron" />
+        <img src="img/profil.jpg" alt="handy" class="img-jumbotron" />
         <h1 class="judul-content">HANDY JAYADI</h1>
-        <p class="sub-content">Web Developer | Pelajar</p>
+        <p class="sub-content">crazy rich | Pelajar</p>
       </div>
     </section>
     <!-- akhir jumbotron -->
@@ -57,6 +62,7 @@
           omnis placeat amet unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minus tempora expedita, deserunt sequi perferendis nam veniam dolor quae! Voluptatibus cumque commodi necessitatibus, architecto dignissimos
           libero error numquam veritatis est?
         </p>
+        <p class="p-about-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet veniam porro fugiat reiciendis aliquam exercitationem beatae omnis ipsa voluptatibus sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolor quaerat quos, ipsum laborum placeat! Unde, incidunt? Magnam perferendis sit eum libero, quidem ratione vel nobis obcaecati, et, rem amet corrupti. Labore, tempora dolore voluptatibus quod mollitia, quisquam deleniti asperiores aspernatur praesentium, assumenda earum recusandae autem repudiandae tenetur possimus. Fugit aperiam, facilis maxime similique illum, ut dolorum voluptatum quis temporibus provident distinctio deserunt voluptatem. Quasi optio eum quis nobis error illo vitae repellendus, quod expedita adipisci temporibus ullam rem ea.</p>
       </div>
     </section>
     <!-- akhir about -->
@@ -65,20 +71,18 @@
       <div class="container">
         <h1 class="judul-contact">Contact Me</h1>
         <form action="" class="form">
-          <label for="nama">Nama Lengkap</label>
+          <label class="label" for="nama">Nama Lengkap</label>
           <br />
           <input type="text" name="nama" id="nama" class="form-list" />
           <br />
-          <label for="email">Email </label>
+          <label class="label" for="email">Email </label>
           <br />
           <input type="email" name="email" id="email" class="form-list" />
           <br />
-          <label for="pesan">Pesan </label>
+          <label class="label" for="pesan">Pesan </label>
           <br />
           <input type="textarea" name="pesan" id="pesan" class="form-list-pesan" />
-          <button class="btn-kirim">
-            <a href="">Kirim</a>
-          </button>
+            <a href=""class="btn-kirim" >Kirim</a>
         </form>
       </div>
     </section>
@@ -86,11 +90,13 @@
     <!-- footer -->
     <footer id="footer">
       <div class="container">
+        <div class="footer-content">
         <h1 class="judul-footer">
-          Build with <span class="love">love</span> by<span><a href="" class="a-footer">handy</a></span
+          Build with <span class="love">love</span> by<span><a href="https://www.instagram.com/handyjkk/" class="a-footer">handy</a></span
           >.
         </h1>
         <p class="p-footer">Copyright &copy; 2021</p>
+      </div>
       </div>
     </footer>
     <!-- akhir - footer -->
