--- a/index.html
+++ b/index.html
@@ -52,17 +52,14 @@
       <div class="container">
         <h1 class="judul-about">About Me</h1>
         <p class="p-about-1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae recusandae odit id, cupiditate fuga sint quia cumque modi iste vel similique tenetur repellat et enim dolore inventore ipsum architecto. Recusandae! Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Dicta, et sapiente. Aut exercitationem perspiciatis modi tempore odio, qui soluta inventore delectus incidunt quaerat vitae optio molestias aliquid hic nam. Nobis!
+          Saya lulusan dari SMK NEGERI 1 Denpasar, saat ini saya sedang
+          menempuh Pendidikan di Politeknik Negeri Bali, dan saya
+          memiliki 3 tahun pengalaman di bidang Rekayasa Perangkat
+          Lunak, saya ingin meningkatkan skill saya , dan mencari peluang
+          untuk mengembangkan diri saya di bidang rekayasa perangkat
+          lunak.
+
         </p>
-        <p class="p-about-2">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos minima nisi explicabo neque atque nihil ea ratione iusto, voluptatem repellat. Ab itaque, perferendis amet dignissimos excepturi nostrum ea explicabo eaque repellendus
-          aperiam quam quidem adipisci laboriosam, quo sunt facilis illum atque! Quasi quae sapiente eius, eos dolore ea culpa vero inventore fugiat eveniet ratione blanditiis itaque consectetur error dolores modi sed! Eius vitae suscipit
-          necessitatibus eum dolor architecto impedit in ipsum ullam, labore rerum laudantium delectus, sunt sapiente ducimus minus at non dolores! Consectetur tenetur hic animi. Nostrum sunt magnam veniam assumenda, fugit, et iure, ipsam
-          omnis placeat amet unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minus tempora expedita, deserunt sequi perferendis nam veniam dolor quae! Voluptatibus cumque commodi necessitatibus, architecto dignissimos
-          libero error numquam veritatis est?
-        </p>
-        <p class="p-about-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet veniam porro fugiat reiciendis aliquam exercitationem beatae omnis ipsa voluptatibus sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolor quaerat quos, ipsum laborum placeat! Unde, incidunt? Magnam perferendis sit eum libero, quidem ratione vel nobis obcaecati, et, rem amet corrupti. Labore, tempora dolore voluptatibus quod mollitia, quisquam deleniti asperiores aspernatur praesentium, assumenda earum recusandae autem repudiandae tenetur possimus. Fugit aperiam, facilis maxime similique illum, ut dolorum voluptatum quis temporibus provident distinctio deserunt voluptatem. Quasi optio eum quis nobis error illo vitae repellendus, quod expedita adipisci temporibus ullam rem ea.</p>
       </div>
     </section>
     <!-- akhir about -->
