--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
     <!-- navbar -->
     <nav id="nav">
       <div class="navbar">
-        <div class="container">
-          <!-- logo -->
-          <a href="#" class="logo">
-            <img src="img/img1.jpg" class="img-navbar" />
-          </a>
-          <!-- menu-btn -->
-          <!-- <input type="checkbox" class="menu-btn" id="menu-btn" />
-            <label for="menu-btn" class="menu-icon">
-              <span class="nav-icon"></span>
-            </label> -->
-          <!-- menu -->
+<!--         <div class="container"
           <ul class="menu">
             <li>
               <a href="#" class="nav-link">Home</a>
@@ -34,7 +24,7 @@
               <a href="#contact"  class="nav-link">Contact</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </nav>
     <!-- akhir navbar -->
